2005-03-11  Mike Kestner  <mkestner@novell.com>

	* glib/DelegateWrapper.cs : call g_object_set_data_full since we are
	using its sig, not set_data.

2005-03-10  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs : fix gssize and gsize, they aren't 32 bit
	like the docs say they are.

2005-03-10  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : don't use g_utf8_strlen to determine the byte
	count to be copied, it returns chars, not bytes.
	* glib/glue/unichar.c : implement a quick and dirty strlen glue func.

2005-03-10  Mike Kestner  <mkestner@novell.com>

	* gtk/Style.custom : add bg_pixmap accessors. remove IntPtr[] vars
	and s/6/5 for array sizes.
	* gtk/glue/style.c : add bg_pixmap field glue.
	[Fixes #73532]

2005-03-09  Mike Kestner  <mkestner@novell.com>

	* */*.custom : scrub for string usage in DllImports.
	* gnome/Makefile.am : remove IconTheme.custom, it's not generated.

2005-03-09  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : add IntPtr.Zero guarding.

2005-03-09  Alexandre Gomes  <alexmipego@hotmail.com>

	* gtk/Gtk.metadata: Set GetVisibleRect param to be passed as out.

2005-03-08  Mike Kestner  <mkestner@novell.com>

	* */*.cs : scrub for StringToPtrAnsi and string usage in DllImports.
	* */*.custom : begin the scrub here too.
	* generator/ConstStringGen.cs : implement IManualMarshaler and move to
	100% IntPtr marshaling.
	* generator/Ctor.cs : call Body.Finish too.
	* generator/IManualMarshaler.cs : new interface for generatables that
	marshal manually and need cleanup.
	* generator/Makefile.am : new file.
	* generator/MethodBody.cs : use IManualMarshaler if applicable.

2005-03-07  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBody.cs : remove an unused var.
	* generator/ReturnValue.cs : privatize a couple props. Refactor the
	SymbolTable lookup logic to be generatable based.

2005-03-04  Mike Kestner  <mkestner@novell.com>

	* generator/ImportSignature.cs : out param handling fix.