@@ -115,7 +115,7 @@
 
 	public static void AddFilterForAll (FilterFunc func)
 	{
-		GdkSharp.FilterFuncWrapper wrapper = new GdkSharp.FilterFuncWrapper (func, null);
+		GdkSharp.FilterFuncWrapper wrapper = new GdkSharp.FilterFuncWrapper (func);
 		FilterAllHash [func] = wrapper;
 		gdk_window_add_filter (IntPtr.Zero, wrapper.NativeDelegate, IntPtr.Zero);
 	}
