@@ -69,11 +69,11 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ("\tusing System;");
 			sw.WriteLine ();
 			sw.WriteLine ("#region Autogenerated code");
-			sw.WriteLine ("\tinternal delegate " + retval.MarshalType + " " + wrapper + "(" + isig.ToString() + ");");
+			sw.WriteLine ("\tinternal delegate " + retval.MarshalType + " " + wrapper + "(" + isig + ");");
 			sw.WriteLine ();
-			sw.WriteLine ("\tinternal class " + Name + "Wrapper : GLib.DelegateWrapper {");
+			sw.WriteLine ("\tinternal class " + Name + "Wrapper {");
 			sw.WriteLine ();
-			sw.WriteLine ("\t\tpublic " + retval.MarshalType + " NativeCallback (" + isig.ToString() + ")");
+			sw.WriteLine ("\t\tpublic " + retval.MarshalType + " NativeCallback (" + isig + ")");
 			sw.WriteLine ("\t\t{");
 
 			bool need_sep = false;
@@ -112,7 +112,7 @@ namespace GtkSharp.Generation {
 			}
 
 			sw.Write ("\t\t\t");
-			string invoke = "_managed (" + call_str + ")";
+			string invoke = "managed (" + call_str + ")";
 			if (retval.MarshalType != "void") {
 				if (cleanup_str == "")
 					sw.Write ("return ");
@@ -141,15 +141,15 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ("\t\t}");
 			sw.WriteLine ();
 
-			sw.WriteLine ("\t\tinternal {0} NativeDelegate;", wrapper);
-			sw.WriteLine ("\t\tprotected {0} _managed;", NS + "." + Name);
+			sw.WriteLine ("\t\tinternal " + wrapper + " NativeDelegate;");
+			sw.WriteLine ("\t\t" + NS + "." + Name + " managed;");
 			sw.WriteLine ();
 
-			sw.WriteLine ("\t\tpublic {0} ({1} managed, object o) : base (o)", Name + "Wrapper", NS + "." + Name);
+			sw.WriteLine ("\t\tpublic " + Name + "Wrapper (" + NS + "." + Name + " managed)");
 			sw.WriteLine ("\t\t{");
 
-			sw.WriteLine ("\t\t\tNativeDelegate = new {0} (NativeCallback);", wrapper);
-			sw.WriteLine ("\t\t\t_managed = managed;");
+			sw.WriteLine ("\t\t\tNativeDelegate = new " + wrapper + " (NativeCallback);");
+			sw.WriteLine ("\t\t\tthis.managed = managed;");
 			sw.WriteLine ("\t\t}");
 			sw.WriteLine ("\t}");
 			sw.WriteLine ("#endregion");
