@@ -32,7 +32,7 @@
 
 		static public void SetCustomHandler (Glade.XMLCustomWidgetHandler handler)
 		{
-			callback_wrapper = new GladeSharp.XMLCustomWidgetHandlerWrapper (handler, null);
+			callback_wrapper = new GladeSharp.XMLCustomWidgetHandlerWrapper (handler);
 			glade_set_custom_handler (callback_wrapper.NativeDelegate, IntPtr.Zero);
 		}
 
