@@ -44,7 +44,7 @@
 		[Obsolete("Moved to AccelMap class. Use AccelMap.ForeachUnfiltered instead")]
 		public static void MapForeachUnfiltered(IntPtr data, Gtk.AccelMapForeach foreach_func) {
 			GtkSharp.AccelMapForeachWrapper foreach_func_wrapper = null;
-			foreach_func_wrapper = new GtkSharp.AccelMapForeachWrapper (foreach_func, null);
+			foreach_func_wrapper = new GtkSharp.AccelMapForeachWrapper (foreach_func);
 			gtk_accel_map_foreach_unfiltered(data, foreach_func_wrapper.NativeDelegate);
 		}
 
@@ -112,7 +112,7 @@
 		[Obsolete("Moved to AccelMap class. Use AccelMap.Foreach instead")]
 		public static void MapForeach(IntPtr data, Gtk.AccelMapForeach foreach_func) {
 			GtkSharp.AccelMapForeachWrapper foreach_func_wrapper = null;
-			foreach_func_wrapper = new GtkSharp.AccelMapForeachWrapper (foreach_func, null);
+			foreach_func_wrapper = new GtkSharp.AccelMapForeachWrapper (foreach_func);
 			gtk_accel_map_foreach(data, foreach_func_wrapper.NativeDelegate);
 		}
 
