@@ -47,7 +47,7 @@
 		public Gtk.Widget AppendElement (Gtk.ToolbarChildType type, Gtk.Widget widget, string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -72,7 +72,7 @@
 		public Gtk.Widget InsertElement (Gtk.ToolbarChildType type, Gtk.Widget widget, string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb, IntPtr user_data, int position) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -98,7 +98,7 @@
 		public Gtk.Widget PrependElement (Gtk.ToolbarChildType type, Gtk.Widget widget, string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -123,7 +123,7 @@
 		public Gtk.Widget AppendItem (string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -148,7 +148,7 @@
 		public Gtk.Widget InsertItem (string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb, IntPtr user_data, int position) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -173,7 +173,7 @@
 		public Gtk.Widget PrependItem (string text, string tooltip_text, string tooltip_private_text, Gtk.Widget icon, Gtk.SignalFunc cb) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr ntext = GLib.Marshaller.StringToPtrGStrdup (text);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
@@ -204,7 +204,7 @@
 		public Gtk.Widget InsertStock (string stock_id, string tooltip_text, string tooltip_private_text, Gtk.SignalFunc cb, IntPtr user_data, int position) 
 		{
 			GtkSharp.SignalFuncWrapper cb_wrapper = null;
-			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb, this);
+			cb_wrapper = new GtkSharp.SignalFuncWrapper (cb);
 			IntPtr nstock = GLib.Marshaller.StringToPtrGStrdup (stock_id);
 			IntPtr ntiptext = GLib.Marshaller.StringToPtrGStrdup (tooltip_text);
 			IntPtr ntipprivtext = GLib.Marshaller.StringToPtrGStrdup (tooltip_private_text);
