@@ -98,7 +98,7 @@
 				return;
 			}
 ;
-			GtkSharp.TreeCellDataFuncWrapper wrapper = new GtkSharp.TreeCellDataFuncWrapper (func, this);
+			GtkSharp.TreeCellDataFuncWrapper wrapper = new GtkSharp.TreeCellDataFuncWrapper (func);
 			CellDataFuncs [cell_renderer.Handle] = wrapper;
 			gtk_tree_view_column_set_cell_data_func(Handle, cell_renderer.Handle, wrapper.NativeDelegate, IntPtr.Zero, IntPtr.Zero);
 		}
@@ -109,7 +109,7 @@
 				return;
 			}
 ;
-			GtkSharp.CellLayoutDataFuncWrapper wrapper = new GtkSharp.CellLayoutDataFuncWrapper (func, this);
+			GtkSharp.CellLayoutDataFuncWrapper wrapper = new GtkSharp.CellLayoutDataFuncWrapper (func);
 			CellDataFuncs [cell_renderer.Handle] = wrapper;
 			gtk_tree_view_column_set_cell_data_func(Handle, cell_renderer.Handle, wrapper.NativeDelegate, IntPtr.Zero, IntPtr.Zero);
 		}
@@ -121,7 +121,7 @@
 				return;
 			}
 ;
-			NodeCellDataFuncWrapper wrapper = new NodeCellDataFuncWrapper (func, this);
+			NodeCellDataFuncWrapper wrapper = new NodeCellDataFuncWrapper (func);
 			CellDataFuncs [cell_renderer.Handle] = wrapper;
 			gtk_tree_view_column_set_cell_data_func(Handle, cell_renderer.Handle, wrapper.NativeDelegate, IntPtr.Zero, IntPtr.Zero);
 		}
